<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.donohoedigital</groupId>
  <artifactId>all</artifactId>
  <packaging>pom</packaging>
  <version>1.0</version>
  <name>all</name>

  <modules>
    <module>common</module>
    <module>gui</module>
    <module>installer</module>
    <module>engine</module>
    <module>photos</module>
    <module>zydeco</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <log4j2.version>2.26.1</log4j2.version>
    <junit.version>4.13.2</junit.version>
    <flatlaf.version>3.7.2</flatlaf.version>
    <jdom2.version>2.0.6.1</jdom2.version>
    <commons-io.version>2.22.0</commons-io.version>
    <annotations.version>26.1.0</annotations.version>
    <install4j.version>13.0.2</install4j.version>
    <snakeyaml-engine.version>3.1</snakeyaml-engine.version>
    <dependency.classpath.outputFile>target/classpath.txt</dependency.classpath.outputFile>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- internal modules -->
      <dependency>
        <groupId>com.donohoedigital</groupId>
        <artifactId>common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.donohoedigital</groupId>
        <artifactId>gui</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.donohoedigital</groupId>
        <artifactId>engine</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- third party -->
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>${log4j2.version}</version>
      </dependency>
      <dependency>
        <groupId>com.formdev</groupId>
        <artifactId>flatlaf</artifactId>
        <version>${flatlaf.version}</version>
      </dependency>
      <dependency>
        <groupId>com.formdev</groupId>
        <artifactId>flatlaf-extras</artifactId>
        <version>${flatlaf.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jdom</groupId>
        <artifactId>jdom2</artifactId>
        <version>${jdom2.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jetbrains</groupId>
        <artifactId>annotations</artifactId>
        <version>${annotations.version}</version>
      </dependency>
      <dependency>
        <groupId>com.install4j</groupId>
        <artifactId>install4j-runtime</artifactId>
        <version>${install4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.snakeyaml</groupId>
        <artifactId>snakeyaml-engine</artifactId>
        <version>${snakeyaml-engine.version}</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <release>25</release>
          <fork>true</fork>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.6</version>
        <configuration>
          <!-- Tests that build Swing widgets (DDUndoManagerTest) or measure fonts
               (StylesFontTest) initialize the AWT toolkit, which on macOS gives the forked
               test JVM a Dock icon for the length of the run.  Headless suppresses that;
               neither test realizes a window, and the macOS font measurements are unchanged. -->
          <argLine>-Djava.awt.headless=true</argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <outputFile>${dependency.classpath.outputFile}</outputFile>
          <includeScope>runtime</includeScope>
        </configuration>
        <executions>
          <execution>
            <id>build-classpath</id>
            <phase>package</phase>
            <goals>
              <goal>build-classpath</goal>
            </goals>
            <configuration>
              <outputFile>${dependency.classpath.outputFile}</outputFile>
              <includeScope>runtime</includeScope>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>

    <resources>
      <resource>
        <filtering>false</filtering>
        <directory>${basedir}/src/main/java</directory>
        <includes>
          <include>**/*</include>
        </includes>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
      <resource>
        <filtering>false</filtering>
        <directory>${basedir}/src/main/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>

    <testResources>
      <testResource>
        <filtering>false</filtering>
        <directory>${basedir}/src/test/java</directory>
        <includes>
          <include>**/*</include>
        </includes>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </testResource>
      <testResource>
        <filtering>false</filtering>
        <directory>${basedir}/src/test/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </testResource>
    </testResources>

  </build>

</project>
